fixing spacing

--- a/frontend/src/css/ArticlePage.css
+++ b/frontend/src/css/ArticlePage.css
@@ -17,13 +17,12 @@ a{
 }
 
 #iconcol{
-  font-size: 1vw;
+	padding-left: 0;
+  padding-right: 0;
 }
 #iconcol1{
-	font-size: 1vw;
-	align-content: center;
-  padding-left: 8%;
-  padding-right: 8%;
+	padding-left: 0;
+  padding-right: 0;
 }
 
 #articleAuthor, #articleDate{
